option for disabling rfd update
no firmware update to stay on firmware 1.4.1 with no dual coprocessor

--- a/homematic/config.json
+++ b/homematic/config.json
@@ -55,6 +55,7 @@
         "type": "match(CCU2)",
         "device": "match(^/dev/.*$)",
         "reset": "bool?"
+        "update": "bool?"
       }
     ],
     "wired_enable": "bool",
